syntax = "proto3";

package dto;

option go_package = "src/proto";

enum LogType{
  POST = 0;
  EDIT = 1;
  LOGIN = 2;
  CHANGE_PASSWORD = 3;
  BOOKMARK = 4;
}

enum PostContentType{
  TEXT = 0;
  IMAGE = 1;
  CODE = 2;
}

enum SortByType{
  ALPHABET_ASC = 0;
  ALPHABET_DESC = 1;
  ID_ASC = 2;
  ID_DESC = 3;
}

enum StatCountType {
  VIEW_INCREASE = 0;
  LIKE_INCREASE = 1;
  LIKE_DECREASE = 2;
  SHARE_INCREASE = 3;
}

message User{
  uint32 id = 1;
  string firstname = 2;
  string lastname = 3;
  string displayName = 4;
  string imageUrl = 5;
  Location address = 6;
  Contact contact = 7;
  repeated Organization organizations = 8;
  repeated Team teams = 9;
  repeated Log logs = 10;
}

message Location{
  uint32 id = 1;
  string address = 2;
  string district = 3;
  string province  = 4;
  string country = 5;
  string zipcode = 6;
}

message Contact{
  uint32 id = 1;
  string facebook  = 2;
  string instagram = 3;
  string twitter = 4;
  string linkedin = 5;
}

message Organization{
  uint32 id = 1;
  string name = 2;
  string email = 3;
  string description = 4;
  Location location = 5;
  Contact  contact = 6;
  repeated User members = 7;
  repeated Team teams = 8;
  repeated Role roles = 9;
  repeated Log logs = 10;
}

message Team {
  uint32 id = 1;
  string name = 2;
  string description = 3;
  repeated User members = 4;
  repeated Team subTeams = 5;
  Organization organization = 6;
  repeated Log logs = 7;
}

message Log{
  string title = 1;
  string description = 2;
  LogType type = 3;
  User user = 4;
  string timestamp = 5;
}

message Permission{
  uint32 id = 1;
  string name = 2;
  string code = 3;
  repeated Role roles = 4;
}

message Role {
  uint32 id = 1;
  string name = 2;
  string description = 3;
  repeated Permission permissions = 4;
  repeated User users  = 5;
}

message Credential{
  string accessToken = 1;
  string refreshToken = 2;
  int32 expiresIn = 3;
}

message Register{
  string email = 1;
  string password = 2;
  string firstname = 3;
  string lastname = 4;
  string displayName = 5;
  string imageUrl = 6;
}

message Login{
  string email = 1;
  string password = 2;
}

message ChangePassword{
  uint32 userId = 1;
  string oldPassword = 2;
  string newPassword = 3;
}

message BlogUser{
  uint32 id = 1;
  string firstname = 2;
  string lastname = 3;
  string displayName = 4;
  string imageUrl = 5;
  string description = 6;
}

message BlogPost{
  uint32 id = 1;
  BlogUser author = 2;
  string slug = 3;
  string summary = 4;
  bool isPublish = 5;
  string PublishDate = 6;
  dto.BlogPostStat stat = 7;
  repeated BlogPostSection sections = 8;
}

message BlogPostSection{
  uint32 id = 1;
  uint32 pos = 2;
  PostContentType contentType = 3;
  string content = 4;
}

message BlogPostStat{
  uint32 id = 1;
  uint32 likes = 2;
  uint32 views = 3;
  uint32 shares = 4;
}

message BlogComment{
  uint32 id = 1;
  uint32 userId = 2;
  string content = 3;
  uint32 likes = 4;
  string createdDate = 5;
  string updatedDate = 6;
}

message BlogTag{
  uint32 id = 1;
  string name = 2;
  repeated BlogPost posts = 3;
}